Routing tamam bas lesa el design mesh mazboot ba2a

--- a/FootballAssociationDB.vcxproj.filters
+++ b/FootballAssociationDB.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="HomeForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ClubsForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HomeForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ClubsForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
