--- a/FootballAssociationDB.vcxproj
+++ b/FootballAssociationDB.vcxproj
@@ -122,12 +122,16 @@
   <ItemGroup>
     <ClCompile Include="HomeForm.cpp" />
     <ClCompile Include="MainForm.cpp" />
+    <ClCompile Include="ClubsForm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HomeForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="MainForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="ClubsForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
   </ItemGroup>
@@ -137,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ClubsForm.resx">
+      <DependentUpon>ClubsForm.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
