--- a/FootballAssociationDB.vcxproj.filters
+++ b/FootballAssociationDB.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="ClubsForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StadiumsForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainForm.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ClubsForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StadiumsForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
